# hs-temp-sensor

./: LICENSE  README.md  deploy.sh  pyproject.toml
src/hs_temp_sensor/: __init__.py  __main__.py  ad7124.py
