[project]
name = "hs-temp-sensor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "spidev>=3.7",
]

[project.scripts]
hs-temp-sensor = "hs_temp_sensor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
